--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <tr>
                             <td>1</td>
                             <td>To create a simple webpage using HTML that includes all tags</td>
-                            <td><a href="https://sowmi29.github.io/WebTech/exp1.html" class="btn btn-view">View</a></td>
+                            <td><a href="exp1.html" class="btn btn-view">View</a></td>
                         </tr>
                         <tr>
                             <td>2</td>
